--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ MANIFEST
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
+log/
 
 # Unit test / coverage reports
 htmlcov/
@@ -169,3 +170,7 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Assets
+podcaster/sound/voice_templates/
+podcaster/sound/models/
